--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.9</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.5.2</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>vermeg.esprit</groupId>
-	<artifactId>FaultFinder </artifactId>
-	<version>1.0</version>
-	<name>FaultFinder</name>
-	<description>Tache de CI/CD pour le PFE FaultFinder</description>
+	<groupId>com.application</groupId>
+	<artifactId>ELearningManagement</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>ELearningManagement</name>
+	<description>eLearning Management System using Angular 8 &amp; Springboot</description>
 	<properties>
-		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,71 +25,57 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
- 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>7.34.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		
 	</dependencies>
+
+	
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.4.1</version><!--$NO-MVN-MAN-VER$-->
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
-
-			<plugin>
-			  <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-resources-plugin</artifactId>
-			  <version>3.1.0</version><!--$NO-MVN-MAN-VER$-->
-		    </plugin>
-		    
-		  
-
-
 		</plugins>
 	</build>
-	
-       <distributionManagement>
+
+	<distributionManagement>
         <repository>
          <id>deploymentRepo</id>
          <name>admin</name>
         <url>http://192.168.33.10:8081/repository/maven-releases/</url>
        </repository>
       </distributionManagement>
-      
+
 </project>
