--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.5.9</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>tn.esprit.rh</groupId>
-	<artifactId>achat</artifactId>
+	<groupId>vermeg.esprit</groupId>
+	<artifactId>FaultFinder</artifactId>
 	<version>1.0</version>
-	<name>achat</name>
+	<name>FaultFinder</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
 		<java.version>1.8</java.version>
